--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,8 +1,12 @@
 #navbar{
     display: flex;
     justify-content: space-around;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    box-shadow: 0px 5px 10px 0px;
+    position: sticky;
+    top: 0;
+    background-color: white;
 }
 
 #home{
