--- a/src/Components/productInfo.css
+++ b/src/Components/productInfo.css
@@ -17,11 +17,13 @@
 }
 
 .description{
+    min-height: 150px;
     max-height: 150px;
     overflow: scroll;
 }
 
 .title{
+    min-height: 80px;
     max-height: 80px;
     overflow: scroll;
 }
