--- a/src/Components/productInfo.css
+++ b/src/Components/productInfo.css
@@ -19,11 +19,11 @@
 .description{
     min-height: 150px;
     max-height: 150px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .title{
     min-height: 80px;
     max-height: 80px;
-    overflow: scroll;
+    overflow: auto;
 }
